--- a/site-example/index.html
+++ b/site-example/index.html
@@ -10,5 +10,6 @@
     <h1>Hello World!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatum rem sit itaque qui aspernatur nihil dolores vitae! Placeat sunt repellendus autem deserunt non in, numquam modi harum laborum molestiae!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius eveniet tenetur atque ea voluptas sequi est eligendi. Ex tempore, expedita, soluta, eos quae consectetur dolorum voluptatibus voluptates aliquid harum facere?</p>
 </body>
 </html>
